# promptstackbench

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DECISIONS.md  README.md  ROADMAP.md  SPEC.md  pyproject.toml
.github/workflows/: deploy-site.yml
datasets/: advisory.yaml  architecture_review.yaml  explanation.yaml
docs/: index.html
docs/_app/: version.json
docs/_app/immutable/assets/: 0.DYiUt6xU.css
docs/_app/immutable/chunks/: CRIiqZME.js  mm9VeTQF.js
docs/_app/immutable/entry/: app.pO2dNJpB.js  start.Db5X9gFC.js
docs/_app/immutable/nodes/: 0.DRGYx3Zt.js  1.DG9Yjebe.js  2.DBNiiNdK.js
site/: package.json  pnpm-lock.yaml  svelte.config.js
site/src/: app.html
site/src/lib/components/ui/: Section.svelte
site/src/lib/data/: meta.ts
site/src/routes/: +page.svelte
src/promptstackbench/: __init__.py  cli.py  errors.py
src/promptstackbench/evaluators/: __init__.py  pipeline.py
src/promptstackbench/loaders/: __init__.py  loader.py
src/promptstackbench/reports/: __init__.py  generator.py
src/promptstackbench/runners/: __init__.py  llm_runner.py
src/promptstackbench/schema/: __init__.py  config.py  run.py  task.py  taxonomy.py
src/promptstackbench/store/: __init__.py  db.py
tests/: conftest.py
tests/integration/: test_cli.py
tests/unit/: test_config.py  test_evaluators.py  test_loader.py  test_runner.py  test_store.py  test_task.py  test_taxonomy.py
